--- a/src/styles/includes/_components.scss
+++ b/src/styles/includes/_components.scss
@@ -31,6 +31,7 @@
 @import '../components/blocks/questions';
 @import '../components/blocks/menu-mobile';
 @import '../components/blocks/breadcrumbs';
+@import '../components/blocks/descr-block';
 
 // footer
 @import '../components/blocks/footer/footer';
