--- a/src/styles/components/blocks/header/burger/_burger-navigation-connection.scss
+++ b/src/styles/components/blocks/header/burger/_burger-navigation-connection.scss
@@ -1,5 +1,6 @@
 .burger-menu {
 	.navigation-connection {
+		flex-wrap: wrap;
 		padding-right: 40px;
 		width: 50%;
 		gap: 30px;
@@ -9,10 +10,17 @@
 
 			@include mq(md) {
 				flex: 1 1 auto;
-				flex-direction: row-reverse;
+				flex-flow: row-reverse wrap;
 				align-self: flex-start;
 				justify-content: flex-end;
 				gap: 5px;
+			}
+		}
+
+		&__contact {
+			// white
+			@include mq(md) {
+				flex-basis: 48%;
 			}
 		}
 
@@ -25,6 +33,7 @@
 				border-bottom: 0;
 				border-radius: 12px;
 				padding: 15px;
+				white-space: normal;
 				text-align: center;
 				background-color: var(--color-grey-100);
 			}
