--- a/src/styles/components/cards/_product-card.scss
+++ b/src/styles/components/cards/_product-card.scss
@@ -135,7 +135,8 @@
 		@include flex-alignment(5px, flex-start, flex-end, column);
 	}
 
-	&__subtext {
+	&__subtext,
+	&__price {
 		text-align: right;
 	}
 
@@ -148,8 +149,6 @@
 
 	&__link,
 	&__button {
-		white-space: nowrap;
-
 		@include mq(sm) {
 			flex: 1 0 48%;
 			font-size: 10px;
