--- a/src/styles/components/ui/_button.scss
+++ b/src/styles/components/ui/_button.scss
@@ -118,6 +118,7 @@
 	&__decor {
 		@include flex-alignment;
 
+		flex-shrink: 0;
 		border-radius: 1000px;
 		padding: 4px;
 		width: 44px;
@@ -143,6 +144,7 @@
 	}
 
 	&__point {
+		flex-shrink: 0;
 		border-radius: 50%;
 		width: 6px;
 		height: 6px;
@@ -157,6 +159,7 @@
 	}
 
 	svg {
+		flex-shrink: 0;
 		width: 14px;
 		height: 14px;
 	}
