--- a/src/styles/components/ui/_swiper-elements.scss
+++ b/src/styles/components/ui/_swiper-elements.scss
@@ -122,6 +122,8 @@
 	&__controls {
 		@include flex-alignment(15px, flex-start, center);
 
+		flex-shrink: 0;
+
 		@include mq(lg) {
 			display: none;
 		}
