--- a/src/styles/pages/product-page/_guarantee.scss
+++ b/src/styles/pages/product-page/_guarantee.scss
@@ -1,47 +1,6 @@
 .guarantee-block {
 	@include container;
 
-	&__info {
-		@include flex-alignment(40px, space-between, flex-start);
-
-		margin-bottom: 35px;
-
-		@include mq(md) {
-			flex-direction: column;
-			margin-bottom: 20px;
-			gap: 5px;
-		}
-	}
-
-	&__title {
-		margin-bottom: 0;
-
-		@include mq(md, min) {
-			flex-basis: 25%;
-		}
-	}
-
-	&__descr {
-		@include mq(md, min) {
-			flex-basis: 50%;
-		}
-	}
-
-	&__text {
-		@include mq(lg, min) {
-			width: 64%;
-		}
-
-		@include mq(sm) {
-			font-size: 12px;
-			letter-spacing: -0.03em;
-		}
-
-		&:not(:last-child) {
-			margin-bottom: 8px;
-		}
-	}
-
 	&__images {
 		@include flex-simple(20px);
 
@@ -74,8 +33,7 @@
 		@include bg-properties;
 
 		position: absolute;
-		left: 0;
-		top: 0;
+		inset: 0;
 		width: 100%;
 		height: 100%;
 	}
