--- a/src/html/components/blocks/_questions.html
+++ b/src/html/components/blocks/_questions.html
@@ -41,7 +41,7 @@
                 Вопрос-ответ
             </h2>
 
-            <ul class="spollers" data-spollers data-one-spoller>
+            <ul class="spollers" data-spollers="questions-spollers" data-one-spoller>
                 <li class="spollers__item">
                     @include('../cards/_spoller-card.html', {
                     'title' : 'Срок изготовления проекта?',
