add video from vk for video-reviews block

--- a/src/html/components/blocks/_breadcrumbs.html
+++ b/src/html/components/blocks/_breadcrumbs.html
@@ -4,7 +4,7 @@
             <a class="breadcrumbs__link" href="#">`+links[i]+`</a>
             </li>
             }
-            @for (var i = links.length - 1; i < links.length; i++) { <li class="breadcrumbs__item" aria-current="page">`+links[i]+`</li>
+            @for (var i = links.length - 1; i < links.length; i++) { <li class="breadcrumbs__item"><span aria-current="page" aria-disabled>`+links[i]+`</span></li>
                 }
     </ul>
 </div>
