--- a/src/styles/pages/home-page/_video-reviews.scss
+++ b/src/styles/pages/home-page/_video-reviews.scss
@@ -21,13 +21,21 @@
 		width: 100%;
 	}
 
+	&__wrapper {
+		position: relative;
+		padding-bottom: 56.5%;
+	}
+
 	&__video {
 		@include bg-properties;
 
-		position: relative;
-		width: 100%;
-		background-image: url('../img/blocks/video-reviews/video-1.jpg');
-		aspect-ratio: 2 / 1;
+		position: absolute;
+		inset: 0;
+
+		iframe {
+			width: 100%;
+			height: 100%;
+		}
 
 		&::before {
 			content: '';
