--- a/src/html/components/blocks/header/_menu-categories.html
+++ b/src/html/components/blocks/header/_menu-categories.html
@@ -23,7 +23,7 @@
                     </li>
                 </ul>
             </li>
-            <!-- <li class="nav-menu__category">
+            <li class="nav-menu__category">
                 <span class="nav-menu__title">
                     Корпусная мебель
                 </span>
@@ -60,9 +60,9 @@
                         <a href="#">Мойки и аксессуары</a>
                     </li>
                 </ul>
-            </li> -->
+            </li>
         </ul>
-        <!-- <form class="menu-categories__search form" action="#">
+        <form class="menu-categories__search form" action="#">
             <div class="form__item">
                 <label class="sr-only" for="nav-menu-search">
                     Введите, что вы хотите найти
@@ -74,6 +74,6 @@
                     </svg>
                 </button>
             </div>
-        </form> -->
+        </form>
     </div>
 </div>
